# agentic-ai

./: LICENSE  README.md
01_hello_agent/: README.md  pyproject.toml
02_model_configuration/src/model_configuration/: global_level.py  run_level.py
03_tool_calling/: README.md
03_tool_calling/src/tool_calling/: tool_calling.py
05_local_context/: README.md  pyproject.toml
05_local_context/src/local_context/: main.py
06_dynamic_instructions/: README.md  pyproject.toml
06_dynamic_instructions/src/06_dynamic_instructions/: main.py
07_streaming_agent/: README.md  pyproject.toml
08_clone_agent/: README.md
09_agents_as_tool/: README.md
10_basic_handsoff/: README.md  pyproject.toml
10_basic_handsoff/src/10_basic_handsoff/: main.py
11_advanced_tool/: README.md  pyproject.toml
11_advanced_tool/src/11_advanced_tool/: mini-lab.py  part1.py  part2.py  part3.py  part4.py  tool_dynamic_permissions.py
agents_as_tool/: pyproject.toml
agents_as_tool/src/agents_as_tool/: main.py
clone_agent/: pyproject.toml
hello_agent/: README.md
hello_agent/src/hello_agent/: main.py
local_context/: README.md
local_context/src/local_context/: main.py
model_configuration/: README.md
model_configuration/src/model_configuration/: agent_level.py
streaming_agent/src/streaming_agent/: main.py
temprature_setting/: pyproject.toml
temprature_setting/src/temprature_setting/: main.py
tool_calling/: pyproject.toml
