[project]
name = "streaming-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "NabeelKhushk", email = "62885321+NabeelKhushk@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.5.1",
]

[project.scripts]
streaming-agent = "streaming_agent:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
